Added email signature

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -36,7 +36,7 @@ html
 	body
 
 		//- HEADER
-		#header: .container
+		#header
 
 			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 			//- ... or completely change this header to suit your design.
