--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -1,3 +1,4 @@
 // Override Bootstrap variables in this file, e.g.
 
-$font-size-base: 14px;
+$font-size-base: 16px;
+$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif
