Got autocompletes done for registration page

--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -5,4 +5,4 @@ block content
     h1 Thank you!
     p We've successfully received your payment!
     p.text-center 
-      a.btn.btn-primary.btn-lg Register for Spring League
+      a.btn.btn-primary.btn-lg(href="/") View Homepage
