--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -9,7 +9,7 @@ block content
       h1 Welcome
       p South Florida Ultimate site is currently in development.
       p.text-center 
-        a.btn.btn-primary.btn-lg Register for Spring League
+        a.btn.btn-primary.btn-lg(href="/register") Register for Spring League
 
     .banner
       ul
