--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5839,3 +5839,6 @@ button.close {
   min-height: 700px; }
   .banner.unslider-fade img {
     width: 100%; }
+
+.modal-body {
+  font-size: 17px; }
