Added spring league info

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -7,7 +7,7 @@ block content
   .container
     .jumbotron
       h1 Welcome
-      p South Florida Ultimate site is currently in development.
+      p South Florida Ultimate's 2016 Spring League registration is now open!
       p.text-center 
         a.btn.btn-primary.btn-lg(href="/register") Register for Spring League
 
