--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -4,9 +4,11 @@ block head
   meta(property="og:title"        content="2016 Spring League Registration")
   meta(property="og:type"         content="website")
   meta(property="og:url"          content="http://www.sflultimate.com/register")
-  meta(property="og:image"        content="http://www.sflultimate.com/images/registration-og-image.jpg")
   meta(property="og:description"  content="Registration is now open.  For Spring League we'll be back at Ives Estates Park on Sundays, starting February 21st.")
 
+  meta(property="og:image"        content="http://www.sflultimate.com/images/registration-og-image.jpg")
+  meta(property="og:image:width"  content="1200")
+  meta(property="og:image:height" content="630")
 
 block content
   .container: .row: .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
