--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -3,6 +3,6 @@ extends ../layouts/default
 block content
   .container: .jumbotron
     h1 Thank you!
-    p We've successfully received your payment!
+    p We've successfully received your payment!  Should you have any questions, feel free to email us at <strong>sflultimate@gmail.com</strong>.
     p.text-center 
-      a.btn.btn-primary.btn-lg(href="/") View Homepage
+      a.btn.btn-primary.btn-lg(href="/") Return to Homepage
