--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -6,11 +6,13 @@ block css
 block content
   .container
     .jumbotron
-      h1 Welcome
-      p South Florida Ultimate's 2016 Spring League registration is now open!
-      p.text-center 
-        a.btn.btn-primary.btn-lg(href="/register") Register for Spring League
-
+      .row
+        .col-sm-4
+          img.img-responsive(src='/images/logo-circled.png' style='margin: 0 auto; max-width:90%')
+        .col-sm-8
+          h1 Welcome!
+          p South Florida Ultimate's 2016 Spring League registration is now open!
+          a.btn.btn-primary.btn-lg(href="/register") Register for Spring League
     .banner
       ul
         li
