--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -46,24 +46,42 @@ block content
             label(for='lastName') Last Name
             input#lastName.form-control(type='text' name='name.last' placeholder='' value=formData['name.last'] required)
 
+      //- Email
       .form-group
         label(for='email') Email address
         input#email.form-control(type='email' name='email'   placeholder='' value=formData.email required)
 
+      //- Pairing
       .form-group
         label(for='partner') Partner<br><small>If you would like to pair up with another player for sign-up, write their name here.</small>
         input#partner.form-control(type='partner' autocomplete='false' name='partner' placeholder='' value=formData.partner)
         input#partner_id.form-control.hidden(type='partner_id' autocomplete='false' name='partner_id' placeholder='' value=formData.partner_id)
-      label Are you a:
-      .radio
-        label
-          input#adult(type='radio'   name='age' value='adult' checked)
-          |     Adult
-      .radio
-        label
-          input#student(type='radio' name='age' value='student')
-          |     Student
 
+      //- Age Group
+      #age
+        label Are you a:
+          .radio
+            label
+              input(type='radio' name='age' value='Adult')
+              |     Adult
+          .radio
+            label
+              input(type='radio' name='age' value='Student')
+              |     Student
+
+      //- Participation
+      label(for="participation" name="participation") Expected Attendance
+
+      p
+        small Knowing how often you plan on being there helps captains pick well-rounded teams
+
+      select#participation.form-control(name="participation" value=formData.participation)
+        option(value="30") Less than 30%
+        option(value="50") Around 50%
+        option(value="80" selected="selected") Greater than 80%
+      br
+
+      //- Shirt Size
       label(for="shirtSize" name="shirtSize") Shirt Size
       select#shirtSize.form-control(name="shirtSize" value=formData.shirtSize)
         option(value="S") S
@@ -71,8 +89,9 @@ block content
         option(value="L") L
         option(value="XL") XL
         option(value="XXL") XXL
-
       br
+
+      //- Skill Level
       label(for="skillLevel" name="skillLevel") Skill Level
       select#skillLevel.form-control(name="skillLevel" value=formData.skillLevel)
         option(value='1') 1 - Absolute Beginner
