Added SEO optimizations

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -9,6 +9,9 @@ html(lang='en')
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
 
+    //- Standard OpenGraph Properties
+    meta(property="og:type" content="website")
+
     title= title || 'SFL Ultimate'
     link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
