--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,5 +1,10 @@
 extends ../layouts/default
 
+block head
+  meta(property="og:title"        content="South Florida Ulitmate")
+  meta(property="og:url"          content="http://www.sflultimate.com/")
+  meta(property="og:description"  content="Since 1968, we promote, develop, play, and enjoy the sport of Ultimate Frisbee in South Florida, working always as a non-for-profit organization.")
+
 block css
   link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/css/unslider.css")
 
