Fixed autocomplete bug if user clicks and then changes mind on name

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -29,7 +29,7 @@ block content
     hr
 
     h3 Registration
-    form(action="register" method="post" autocomplete="off")
+    form#registration(action="register" method="post" autocomplete="off")
       if err
         .alert.alert-danger
           strong Error: 
