--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -15,7 +15,7 @@ html(lang='en')
     title= title || 'SFL Ultimate'
     link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
-    //- link(rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
+    link(rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,700,300')
 
     //- Customise the stylesheet for your site by editing /public/styles/site.sass
@@ -88,10 +88,13 @@ html(lang='en')
 
     //- FOOTER
     .container: #footer
-      
+      a(href='https://www.facebook.com/sflultimate/' target='blank')
+        i.fa.fa-facebook
+      a(href='mailto:sflultimate@gmail.com' target='blank')
+        i.fa.fa-envelope
 
       //- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-      p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+      span Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
 
 
     //- JAVASCRIPT
@@ -121,6 +124,15 @@ html(lang='en')
       script(src='/keystone/js/content/editor.js')
 
     //- Add scripts that are globally required by your site here.
+    script.
+      (function (){
+        var isLocalHost = window.location.href.indexOf("localhost") > -1;
+        if (isLocalHost) {
+          var script = document.createElement('script');
+          script.src = '//localhost:35729/livereload.js';
+          document.body.appendChild(script);
+        }
+      })();
 
     //- Include template-specific javascript files by extending the js block
     block js
