Added homepage facebook share image

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -3,7 +3,11 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="South Florida Ulitmate")
   meta(property="og:url"          content="http://www.sflultimate.com/")
-  meta(property="og:description"  content="Since 1968, we promote, develop, play, and enjoy the sport of Ultimate Frisbee in South Florida, working always as a non-for-profit organization.")
+  meta(property="og:description"  content="Since 1968, we promote, develop, & enjoy the sport of Ultimate Frisbee in the Miami & Ft. Lauderdale area, working always as a non-for-profit organization.")
+
+  meta(property="og:image"        content="http://www.sflultimate.com/images/homepage-og-image.jpg")
+  meta(property="og:image:width"  content="1200")
+  meta(property="og:image:height" content="630")
 
 block css
   link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/css/unslider.css")
