--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block head
-  meta(property="og:title"        content="2016 Spring League Registration")
+  meta(property="og:title"        content="Register now for Spring League!")
   meta(property="og:url"          content="http://www.sflultimate.com/register")
-  meta(property="og:description"  content="Registration is now open.  For Spring League we'll be back at Ives Estates Park on Sundays, starting February 21st.")
+  meta(property="og:description"  content="Regular registration closes February 13th, so be sure to sign up before then to avoid a late registration price of $65!")
 
   meta(property="og:image"        content="http://www.sflultimate.com/images/registration-og-image.jpg")
   meta(property="og:image:width"  content="1200")
