--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="Register now for Spring League!")
   meta(property="og:url"          content="http://www.sflultimate.com/register")
-  meta(property="og:description"  content="Regular registration closes February 13th, so be sure to sign up before then to avoid a late registration price of $65!")
+  meta(property="og:description"  content="Regular registration closes February 13th, so be sure to sign today to avoid the late registration price of $65!")
 
   meta(property="og:image"        content="http://www.sflultimate.com/images/registration-og-image.jpg")
   meta(property="og:image:width"  content="1200")
