--- a/templates/views/teams.jade
+++ b/templates/views/teams.jade
@@ -16,8 +16,8 @@ block content
         p.lead
           span(ng-repeat='captain in team.captains') {{captain.name.first}} {{captain.name.last}} {{!$last ? "&":""}} 
         table.table.table-striped.table-bordered
-          tr(ng-repeat='player in team.players')
-            td {{player.name.first}} {{player.name.last}}
+          tr(ng-repeat='player in team.players | orderBy :"-skillLevel"')
+            td {{$index + 1}}. {{player.name.first}} {{player.name.last}}
 
 block js
   script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
