--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -52,18 +52,26 @@
   article {
     min-height: 850px;
   }
+}
 
-  .team-color {
-    border-radius: 100%;
-    display: inline-block;
-    height: 25px;
-    width: 25px;
-    margin-right: 5px;
-    position: relative;
-    top: 2px;
+.team-color {
+  border-radius: 100%;
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 5px;
+  position: relative;
+  top: 2px;
 
-    &.white, &.yellow {
-      border: 1px solid rgba(0, 0, 0, 0.25);
+  &.white, &.yellow {
+    border: 1px solid rgba(0, 0, 0, 0.25);
+  }
+
+  .schedule & {
+    opacity: 0.5;
+    margin-right: 10px;
+    &:hover {
+      opacity: 0.9;
     }
   }
 }
@@ -76,4 +84,3 @@
 .grey   { background-color: grey;   }
 .green  { background-color: green;  }
 .black  { background-color: black;  }
-
