--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -3,7 +3,11 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="League Teams")
   meta(property="og:url"          content="http://www.sflultimate.com/schedule")
-  meta(property="og:description"  content="Discover the Schedule for this year's Spring League.")
+  meta(property="og:description"  content="Discover the games schedule for the 2016's Spring League.")
+
+  meta(property="og:image"        content="http://www.sflultimate.com/images/open-graph/schedule.jpg")
+  meta(property="og:image:width"  content="1200")
+  meta(property="og:image:height" content="630")
 
 block content
   .container(ng-app="scheduleApp")
