--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -1,7 +1,7 @@
 extends ../layouts/default
 
 block head
-  meta(property="og:title"        content="League Teams")
+  meta(property="og:title"        content="Spring League Schedule")
   meta(property="og:url"          content="http://www.sflultimate.com/schedule")
   meta(property="og:description"  content="Discover the games schedule for the 2016's Spring League.")
 
