--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,8 +20,8 @@ block content
           img.img-responsive(src='/images/logo-circled.png' style='margin: 0 auto; max-width:90%')
         .col-sm-8
           h1 Welcome!
-          p South Florida Ultimate's 2016 Spring League registration is now open!
-          a.btn.btn-primary.btn-lg(href="/register") Register for Spring League
+          p South Florida Ultimate's 2016 Spring League registration is now under way!
+          a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .banner
       ul
         li
