--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,7 +20,7 @@ block content
           img.img-responsive(src='/images/logo-circled.png' style='margin: 0 auto; max-width:90%')
         .col-sm-8
           h1 Welcome!
-          p South Florida Ultimate's 2016 Spring League registration is now under way!
+          p South Florida Ultimate's 2016 Spring League season is now under way!
           a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .banner
       ul
