--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -30,6 +30,7 @@ block content
 
 
 block js
+  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
   script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')
   script.
 
