Updated stats and added holiday park

--- a/templates/views/community.jade
+++ b/templates/views/community.jade
@@ -119,10 +119,27 @@ block js
               type: "grass/dirt"
             },
             description: "Casual pick up game with a wide range of experience levels. Rain usually cancels this game as it relies on softball field lights to be on. Game is played in the grass that is in the middle of the 4 softball fields. Most players are wearing cleats.  We occasionally also plays Saturday around 1pm."
+          },
+          {
+            title: "Ultimate Frisbee Ft. Lauderdale",
+            day: "Sundays",
+            time: "4pm",
+            contact: {
+              url: "https://www.facebook.com/groups/1458319214390728/"
+            },
+            location: {
+              name: "Holiday Park",
+              type: "grass",
+              address: {
+                street: "1000 E Sunrise Blvd Fort Lauderdale",
+                city: "Miami",
+                state: "FL",
+                zipCode: 33304
+              },
+            },
+            description: "Relaxed pickup located right in Ft. Lauderdale.  Bring a light, a dark, and cleats!"
           }
         ];
-
-
 
       /*
           These are the games that I pulled from the pick-up Ultimate site that I have heard are legit but I have never played:
