--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -39,7 +39,9 @@ block js
 
         $scope.games = [];
         $scope.teams = [];
-        $scope.today = new Date().getTime();
+
+        // Today plus one day of separation
+        $scope.today = new Date().getTime() - (1000, 60 * 60 * 24);
 
         $scope.colorFilter = function (item) {
           return item;
