--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -31,7 +31,6 @@ block content
 
 block js
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')
   script.
 
     angular.module("scheduleApp", [])
@@ -41,7 +40,8 @@ block js
         $scope.teams = [];
 
         // Today plus one day of separation
-        $scope.today = new Date().getTime() - (1000, 60 * 60 * 24);
+        var dayInMilliseconds = 1000 * 60 * 60 * 24;
+        $scope.today = new Date().getTime() - dayInMilliseconds;
 
         $scope.colorFilter = function (item) {
           return item;
